--- a/Cool-Cola/ReportPages.html
+++ b/Cool-Cola/ReportPages.html
@@ -1,2 +1,16 @@
-# PowerBI-Portfolio
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8">
+  <title>Raport: Sprzedaż 2024</title>
+</head>
+<body>
+  <h1>Raport Power BI: Sprzedaż 2024</h1>
+  <p>Ten raport przedstawia analizę sprzedaży według regionów i produktów.</p>
 
+  <h3>Link do raportu:</h3>
+  <p><a href="https://app.powerbi.com/view?r=TWÓJ_LINK">Zobacz w Power BI</a></p>
+
+  <p><a href="index.html">← Powrót do strony głównej</a></p>
+</body>
+</html>
